@@ -1,28 +1,26 @@
 package gov.cms.bfd.server.ng.eob;
 
-import static gov.cms.bfd.server.ng.util.MetricTimer.SAMHSA_FILTER_MODE;
+import static gov.cms.bfd.server.ng.util.MetricRecorder.SAMHSA_FILTER_MODE;
 
+import ca.uhn.fhir.rest.api.server.RequestDetails;
+import gov.cms.bfd.server.ng.ClaimFilterOptions;
 import gov.cms.bfd.server.ng.ClaimSecurityStatus;
 import gov.cms.bfd.server.ng.SamhsaFilterMode;
 import gov.cms.bfd.server.ng.SecurityLabel;
 import gov.cms.bfd.server.ng.beneficiary.BeneficiaryRepository;
 import gov.cms.bfd.server.ng.claim.ClaimRepository;
 import gov.cms.bfd.server.ng.claim.model.*;
+import gov.cms.bfd.server.ng.input.ClaimIdSearchCriteria;
 import gov.cms.bfd.server.ng.input.ClaimSearchCriteria;
 import gov.cms.bfd.server.ng.input.DateTimeRange;
 import gov.cms.bfd.server.ng.loadprogress.LoadProgressRepository;
 import gov.cms.bfd.server.ng.util.FhirUtil;
 import gov.cms.bfd.server.ng.util.IdrConstants;
-import gov.cms.bfd.server.ng.util.MetricTimer;
+import gov.cms.bfd.server.ng.util.MetricRecorder;
 import gov.cms.bfd.server.ng.util.SystemUrls;
-import io.micrometer.core.instrument.DistributionSummary;
-import io.micrometer.core.instrument.MeterRegistry;
 import io.micrometer.core.instrument.Tags;
 import java.time.LocalDate;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Stream;
 import lombok.RequiredArgsConstructor;
 import org.hl7.fhir.r4.model.Bundle;
@@ -43,8 +41,7 @@ public class EobHandler {
   private final BeneficiaryRepository beneficiaryRepository;
   private final ClaimRepository claimRepository;
   private final LoadProgressRepository loadProgressRepository;
-  private final MeterRegistry meterRegistry;
-  private final MetricTimer metricTimer;
+  private final MetricRecorder metricRecorder;
 
   // Cache the security labels map to avoid repeated I/O and parsing
   private static final Map<String, List<SecurityLabel>> SECURITY_LABELS =
@@ -54,13 +51,15 @@ public class EobHandler {
    * Returns an {@link ExplanationOfBenefit} by its FHIR ID.
    *
    * @param fhirId FHIR ID
-   * @param samhsaFilterMode SAMHSA filter mode
+   * @param options claim filter options
    * @return an Optional containing the ExplanationOfBenefit if found
    */
-  public Optional<ExplanationOfBenefit> find(final Long fhirId, SamhsaFilterMode samhsaFilterMode) {
+  public Optional<ExplanationOfBenefit> find(final Long fhirId, ClaimFilterOptions options) {
     var eobs =
         searchByIdsInner(
-            List.of(fhirId), new DateTimeRange(), new DateTimeRange(), samhsaFilterMode);
+            new ClaimIdSearchCriteria(
+                List.of(fhirId), new DateTimeRange(), new DateTimeRange(), Collections.emptyList()),
+            options);
     return eobs.stream().findFirst();
   }
 
@@ -68,53 +67,60 @@ public class EobHandler {
    * Search for claims data by bene.
    *
    * @param criteria filter criteria
-   * @param samhsaFilterMode SAMHSA filter mode
+   * @param options claim filter options
+   * @param requestDetails Hapi FHIR request details
    * @return bundle
    */
-  public Bundle searchByBene(ClaimSearchCriteria criteria, SamhsaFilterMode samhsaFilterMode) {
+  public Bundle searchByBene(
+      ClaimSearchCriteria criteria,
+      ClaimFilterOptions options,
+      Optional<RequestDetails> requestDetails) {
 
-    return metricTimer.recordMetric(
-        "application.eob.handler.search_by_bene",
-        () -> {
-          var beneSk = criteria.beneSk();
-          var beneXrefSk = beneficiaryRepository.getXrefSkFromBeneSk(beneSk);
-          // Don't return data for historical beneSks
-          if (beneXrefSk.isEmpty() || !beneXrefSk.get().equals(beneSk)) {
-            return new Bundle();
-          }
+    var beneSk = criteria.beneSk();
+    var beneXrefSk = beneficiaryRepository.getXrefSkFromBeneSk(beneSk);
+    // Don't return data for historical beneSks
+    if (beneXrefSk.isEmpty() || !beneXrefSk.get().equals(beneSk)) {
+      return new Bundle();
+    }
 
-          var repositoryCriteria =
-              new ClaimSearchCriteria(
-                  beneXrefSk.get(),
-                  criteria.claimThroughDate(),
-                  criteria.lastUpdated(),
-                  criteria.limit(),
-                  criteria.offset(),
-                  criteria.tagCriteria(),
-                  criteria.claimTypeCodes(),
-                  criteria.sources());
+    var repositoryCriteria =
+        new ClaimSearchCriteria(
+            beneXrefSk.get(),
+            criteria.claimThroughDate(),
+            criteria.lastUpdated(),
+            criteria.limit(),
+            criteria.offset(),
+            criteria.tagCriteria(),
+            criteria.claimTypeCodes(),
+            criteria.sources());
 
-          var claims = claimRepository.findByBeneXrefSk(repositoryCriteria);
+    var claims = claimRepository.findByBeneXrefSk(repositoryCriteria);
+    var samhsaFilterMode = options.getSamhsaFilterMode();
 
-          var filteredClaims =
-              filterSamhsaClaims(claims, samhsaFilterMode)
-                  .skip(repositoryCriteria.resolveOffset())
-                  .limit(repositoryCriteria.resolveLimit())
-                  .map(claim -> transformToFhir(claim, samhsaFilterMode));
-
-          var bundle =
-              FhirUtil.bundleOrDefault(filteredClaims, loadProgressRepository::lastUpdated);
-          recordResultSize(bundle, samhsaFilterMode);
-          return bundle;
-        },
-        _ -> Tags.of(SAMHSA_FILTER_MODE, samhsaFilterMode.name()));
-  }
-
-  private void recordResultSize(Bundle bundle, SamhsaFilterMode samhsaFilterMode) {
-    DistributionSummary.builder("application.eob.handler.results.size")
-        .tag(SAMHSA_FILTER_MODE, samhsaFilterMode.name())
-        .register(meterRegistry)
-        .record(bundle.getEntry().size());
+    var bundle =
+        metricRecorder.recordMetric(
+            "application.eob.handler.transform",
+            () -> {
+              var filteredClaims =
+                  filterSamhsaClaims(claims, samhsaFilterMode)
+                      .skip(repositoryCriteria.resolveOffset())
+                      .limit(repositoryCriteria.resolveLimitWithExtra(1))
+                      .map(claim -> transformToFhir(claim, options));
+              return FhirUtil.bundleOrDefault(
+                  filteredClaims,
+                  loadProgressRepository::lastUpdated,
+                  requestDetails,
+                  // we want the raw limit
+                  Optional.of(repositoryCriteria.resolveLimit()),
+                  Optional.of(repositoryCriteria.resolveOffset()));
+            },
+            _ -> Tags.of(SAMHSA_FILTER_MODE, samhsaFilterMode.name()));
+    metricRecorder.recordDistribution(
+        "application.eob.handler.results.size",
+        bundle.getEntry().size(),
+        SAMHSA_FILTER_MODE,
+        samhsaFilterMode.name());
+    return bundle;
   }
 
   private Stream<? extends ClaimBase> filterSamhsaClaims(
@@ -122,42 +128,42 @@ public class EobHandler {
     // Process claims in parallel
     // Note: DO NOT call toList() until the very end as materializing the list multiple times could
     // negatively impact perf.
-    var claimStream =
-        claims.parallelStream().sorted(Comparator.comparing(ClaimBase::getClaimUniqueId));
+    var claimStream = claims.parallelStream();
     return switch (samhsaFilterMode) {
-      case INCLUDE -> claimStream;
-      case ONLY_SAMHSA -> claimStream.filter(this::claimHasSamhsa);
-      case EXCLUDE -> claimStream.filter(claim -> !claimHasSamhsa(claim));
+      case INCLUDE -> claimStream.sorted(Comparator.comparing(ClaimBase::getClaimUniqueId));
+      // it is faster to filter unordered so if we are filtering we should do it unordered first
+      // before the id ordering
+      case ONLY_SAMHSA ->
+          claimStream
+              .unordered()
+              .filter(this::claimHasSamhsa)
+              .sorted(Comparator.comparing(ClaimBase::getClaimUniqueId));
+      case EXCLUDE ->
+          claimStream
+              .unordered()
+              .filter(claim -> !claimHasSamhsa(claim))
+              .sorted(Comparator.comparing(ClaimBase::getClaimUniqueId));
     };
   }
 
   /**
    * Search for claims data by claim ID.
    *
-   * @param claimUniqueIds claim IDs
-   * @param serviceDate service date
-   * @param lastUpdated last updated
-   * @param samhsaFilterMode SAMHSA filter mode
+   * @param criteria id search criteria
+   * @param options claim filter options
    * @return bundle
    */
-  public Bundle searchById(
-      List<Long> claimUniqueIds,
-      DateTimeRange serviceDate,
-      DateTimeRange lastUpdated,
-      SamhsaFilterMode samhsaFilterMode) {
-    var eobs = searchByIdsInner(claimUniqueIds, serviceDate, lastUpdated, samhsaFilterMode);
+  public Bundle searchById(ClaimIdSearchCriteria criteria, ClaimFilterOptions options) {
+    var eobs = searchByIdsInner(criteria, options);
     return FhirUtil.bundleOrDefault(eobs.stream(), loadProgressRepository::lastUpdated);
   }
 
   private List<ExplanationOfBenefit> searchByIdsInner(
-      List<Long> claimUniqueIds,
-      DateTimeRange serviceDate,
-      DateTimeRange lastUpdated,
-      SamhsaFilterMode samhsaFilterMode) {
-    var claims = claimRepository.findByIds(claimUniqueIds, serviceDate, lastUpdated);
+      ClaimIdSearchCriteria criteria, ClaimFilterOptions options) {
+    var claims = claimRepository.findByIds(criteria);
 
-    return filterSamhsaClaims(claims, samhsaFilterMode)
-        .map(claim -> transformToFhir(claim, samhsaFilterMode))
+    return filterSamhsaClaims(claims, options.getSamhsaFilterMode())
+        .map(claim -> transformToFhir(claim, options))
         .toList();
   }
 
@@ -166,12 +172,12 @@ public class EobHandler {
    * mode.
    *
    * @param claim the claim
-   * @param samhsaFilterMode filter mode (only samhsa/exclude claims/include)
+   * @param options claim filter options
    * @return the transformed EOB
    */
-  private ExplanationOfBenefit transformToFhir(ClaimBase claim, SamhsaFilterMode samhsaFilterMode) {
+  private ExplanationOfBenefit transformToFhir(ClaimBase claim, ClaimFilterOptions options) {
     var isSamhsa =
-        switch (samhsaFilterMode) {
+        switch (options.getSamhsaFilterMode()) {
           case ONLY_SAMHSA -> true;
           case EXCLUDE -> false;
           case INCLUDE -> claimHasSamhsa(claim);
@@ -180,7 +186,9 @@ public class EobHandler {
     var securityStatus =
         isSamhsa ? ClaimSecurityStatus.SAMHSA_APPLICABLE : ClaimSecurityStatus.NONE;
 
-    return claim.toFhir(securityStatus);
+    var claimState = ClaimState.builder().securityStatus(securityStatus).build();
+
+    return claim.toFhir(options, claimState);
   }
 
   private boolean isCodeSamhsa(
